--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -52,6 +52,15 @@
                             </div>
                         {% endif %}
                     </div>
+                                <!-- NEW: Remember Me Checkbox -->
+                    <div class="mb-3">
+                        <div class="form-check">
+                            {{ form.remember(class="form-check-input") }}
+                            <label class="form-check-label" for="{{ form.remember.id }}">
+                                Remember Me
+                            </label>
+                        </div>
+                    </div>
                     
                     <div class="d-grid">
                         {{ form.submit(class="btn btn-primary") }}
