--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -52,7 +52,7 @@
                             </div>
                         {% endif %}
                     </div>
-                                <!-- NEW: Remember Me Checkbox -->
+                                <!-- Remember Me Checkbox -->
                     <div class="mb-3">
                         <div class="form-check">
                             {{ form.remember(class="form-check-input") }}
@@ -88,20 +88,6 @@
                                 <i class="fas fa-lock me-2"></i>
                                 Admin Console Login
                             </a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="mt-4">
-                    <h6>Demo Accounts:</h6>
-                    <div class="row">
-                        <div class="col-6">
-                            <small class="text-muted">Organization:</small><br>
-                            <code>sample_org / password123</code>
-                        </div>
-                        <div class="col-6">
-                            <small class="text-muted">Volunteer:</small><br>
-                            <code>sample_volunteer / password123</code>
                         </div>
                     </div>
                 </div>
